# dl-template

./: .coveragerc  .gitignore  .gitmodules  Makefile  Makefile.config.example  README.md  config.yaml  medcog_data.py  package-lock.json  pyproject.toml  pyrightconfig.json  requirements.dev.txt  requirements.quality.txt  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
conf/: config.yaml
conf/dataset/: fakedata.yaml  imagefolder.yaml
conf/model/: fakemodel.yaml  resnet.yaml
conf/optimizer/: adam.yaml
conf/schedule/: one_cycle.yaml
conf/trainer/: local.yaml
config/: default.yaml  mae.yaml
docker/: Dockerfile
project/: __init__.py  __main__.py  version.py
project/callbacks/: __init__.py  base.py  image.py  metric.py  table.py
project/core/: __init__.py  adapter.py  cli.py  io.py  task.py  transform.py  types.py
project/data/: __init__.py  dataset.py  helpers.py
project/image/: __init__.py  input.py  output.py
project/metrics/: __init__.py  base.py  classification.py  collection.py
project/model/: __init__.py  base.py  conv.py  trivial_model.py  vit.py
project/old/: types.py
project/structs/: __init__.py  enums.py  example.py  helpers.py  loss.py  prediction.py
tests/: conftest.py  pytest.ini
tests/test_callbacks/: base_callback.py  test_image.py  test_wandb.py
tests/test_main/: test_run.py
tests/test_metrics/: test_classification.py  test_collection.py
tests/test_model/: test_conv.py  test_model.py  test_vit.py
tests/test_structs/: test_enums.py  test_example.py  (+1 more)
tests_old/: conftest.py  pytest.ini
(+58 files in other folders)
