[metadata]
name = project
version = 0.1.0
author = Scott Chase Waggener
description = Template repository for deep learning projects
url = "https://github.com/TidalPaladin/python-template"
keywords = template
license_file = LICENSE

[options]
python_requires = >=3.7
packages = find:
install_requires = 
  torch
  pytorch-lightning
  lightning-bolts
  torchmetrics
  lightning-flash[image]
  pandas
  matplotlib
  jsonargparse[signature]
  einops
  registry @ git+https://github.com/TidalPaladin/callable-registry

[options.extras_require]
test = 
  pytest
  pytest-mock
  pytest-cov
  coverage
quality = 
  autoflake
  autopep8
  black
  flake8
  isort

[pycodestyle]
max-line-length = 120
